// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Channel component snapshot channel already joined 1`] = `
<div
  className="channel"
>
  <div
    className="channel__content"
  >
    <div
      className="channel__header"
    />
    <div
      className="channel__section"
    >
      <span>
        nenhuma mensagem
      </span>
    </div>
    <div
      className="channel__footer "
    >
      <form
        onSubmit={[Function]}
      >
        <input
          className="channel__chat-input"
          onChange={[Function]}
          placeholder="escreva uma mensagem"
          value=""
        />
      </form>
    </div>
  </div>
</div>
`;

exports[`Channel component snapshot channel not joined 1`] = `
<div
  className="channel"
>
  <div
    className="channel__content"
  >
    <div
      className="channel__header"
    />
    <div
      className="channel__section"
    >
      <span>
        nenhuma mensagem
      </span>
    </div>
    <div
      className="channel__footer channel__footer--join"
    >
      <button
        className="blue"
        onClick={[Function]}
      >
        Entrar no canal
      </button>
    </div>
  </div>
</div>
`;

exports[`Channel component snapshot channel not selected 1`] = `
<div
  className="channel"
>
  <div
    className="channel__empty-state"
  >
    <strong>
      Escolha ou crie um canal para conversar com outras pessoas!
    </strong>
  </div>
</div>
`;

exports[`Channel component snapshot channel selected with msgs 1`] = `
<div
  className="channel"
>
  <div
    className="channel__content"
  >
    <div
      className="channel__header"
    />
    <div
      className="channel__section"
    >
      <div
        className="message "
      >
        <div
          className="message__left"
        >
          <span
            className="message__photo colorundefined"
          >
            X
          </span>
        </div>
        <div
          className="message__right"
        >
          <strong
            className="message__info"
          >
            <span>
              xunda
            </span>
            <span
              className="message__date"
            >
              8/27/2018, 11:22 AM
            </span>
          </strong>
          <span
            className="message__text"
          >
            hello!
          </span>
        </div>
      </div>
    </div>
    <div
      className="channel__footer channel__footer--join"
    >
      <button
        className="blue"
        onClick={[Function]}
      >
        Entrar no canal
      </button>
    </div>
  </div>
</div>
`;

exports[`Channel component snapshot channel selected with no msgs 1`] = `
<div
  className="channel"
>
  <div
    className="channel__content"
  >
    <div
      className="channel__header"
    />
    <div
      className="channel__section"
    >
      <span>
        nenhuma mensagem
      </span>
    </div>
    <div
      className="channel__footer channel__footer--join"
    >
      <button
        className="blue"
        onClick={[Function]}
      >
        Entrar no canal
      </button>
    </div>
  </div>
</div>
`;
